新增生成图片功能

--- a/docs/.vuepress/style.styl
+++ b/docs/.vuepress/style.styl
@@ -13,3 +13,11 @@ details
   ul
     margin-left 1.5em
     margin-bottom 0
+
+button
+  appearance none
+  -webkit-appearance none
+  outline none
+
+  &:focus
+    outline none
