--- a/docs/.vuepress/style.styl
+++ b/docs/.vuepress/style.styl
@@ -21,3 +21,12 @@ button
 
   &:focus
     outline none
+
+cite
+  display block
+  text-align right
+  font-style normal
+
+  &::before
+    content "——"
+    padding-right 0.5em
