--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -31,7 +31,26 @@ cite
     content "——"
     padding-right 0.5em
 
-img {
-  display block
-  margin 0 auto
-}
+p
+  & > img:first-child
+    display block
+    margin 0 auto
+
+.align-center
+  text-align center
+
+.blog-btn
+  background #3eaf7c
+  color #fff
+  padding 0.5em
+  border-radius 4px
+  font-size 0.9rem
+  transition all 0.3s
+
+  i
+    font-size 1.5em
+    vertical-align sub
+
+  &:hover
+    text-decoration none !important
+    background #59c795
