--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -1,3 +1,4 @@
+// 覆盖原有样式
 blockquote
   border-left 0.25rem solid #3eaf7c
   font-size 1rem
@@ -36,6 +37,14 @@ p
     display block
     margin 0 auto
 
+// 增强当前文章提示效果
+.sidebar-link
+  &.active
+    &+ul
+      border-left 0.25rem solid #3eaf7c
+      margin-bottom 1rem
+
+// 自定义样式
 .align-center
   text-align center
 
