webkit滚动性能增强

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -37,6 +37,10 @@ p
     display block
     margin 0 auto
 
+// 增强代码在 webkit 下滚动性能
+pre
+  -webkit-overflow-scrolling: touch
+
 // 增强当前文章提示效果
 .sidebar-group-items
   & > li > .sidebar-link
